--- a/_posts/2023-12-26-udemyVue.markdown
+++ b/_posts/2023-12-26-udemyVue.markdown
@@ -1,8 +1,47 @@
 ---
 layout: post
-title: "UdemyVue"
+title: "Vue를 활용한 동적 웹 애플리케이션 개발"
 date: 2023-12-26 21:03:36 +0530
 categories: Vue
 ---
 
-## 유데미 Vue 공부
+# Vue를 활용한 동적 웹 애플리케이션 개발
+
+## 데이터 출력과 사용자 입력 반응
+
+- 모던 웹 애플리케이션 개발은 사용자 입력과 이벤트에 반응하는 것을 포함합니다.
+- Vue와 같은 프레임워크를 사용해 반응형이자 동적인 웹 애플리케이션을 만들 수 있습니다.
+
+## 프로젝트 개요
+
+- 초기 프로젝트 파일은 기존과 유사하지만 콘텐츠가 약간 변경되었습니다.
+- ID가 다른 `section` 요소가 있으며, 'Add'와 'Remove' 버튼이 포함되어 있습니다.
+- 카운터를 출력하는 `p` 요소가 있고, 이는 Vue 앱으로 관리됩니다.
+
+## Vue 앱 구조
+
+- Vue 앱은 매우 단순하며, 데이터를 반환하는 `data` 메서드와 숫자 0으로 시작하는 `counter`만 포함합니다.
+- 이벤트 섹션에 Vue 앱을 마운트했습니다.
+
+## 이벤트 처리
+
+- 버튼에 기능이 없고, 눌러도 반응이 없는 상태에서 시작합니다.
+- 순수 JavaScript를 사용하지 않고 Vue의 선언형 접근 방식을 사용해 이벤트를 처리합니다.
+
+### Add 버튼 기능 추가
+
+- `v-on:click` 디렉티브를 사용해 클릭 이벤트에 반응하고 `counter++`로 카운터를 증가시킵니다.
+
+### Reduce 버튼 기능 추가
+
+- 비슷하게 `v-on:click` 디렉티브를 사용해 클릭 이벤트에 반응하고 `counter--`로 카운터를 감소시킵니다.
+
+## Vue의 반응성 이해
+
+- Vue는 카운터 값의 변화를 감지하고 화면의 해당 부분을 자동으로 업데이트합니다.
+- 이는 Vue의 내장된 반응성으로, 개발자로 하여금 화면 업데이트 로직을 직접 처리하지 않아도 되게 합니다.
+
+## 마치며
+
+- Vue를 사용하면 사용자 이벤트를 쉽게 처리할 수 있고, 반응성 있는 웹 애플리케이션 개발이 가능해집니다.
+- 이벤트 처리 방법과 Vue의 반응성 이해는 Vue 개발의 핵심 요소입니다.
